# TouchPad

./: .gitignore  .gitmodules  AGENTS.md  README.md
.github/workflows/: release-ui-tauri.yml
ScanI2C/Scan/: Scan.ino
TinyUSBHID/FakeInput/: FakeInput.ino
docs/: README.md  arduino_ide_supermini_setup.md  ble_conn_test.md  ble_slot_switch_plan.md  bluetooth_migration_notes.md  bom.md  case_notes.md  fpc_pinout.md  next_optimization_notes.md  stability_tuning.md  touchpad_usage.md  v2_intro.md  video_intro_flow.md  windows_ui_packaging.md
manufacturing/: README.md
manufacturing/pcba/: netlist_nicenano_baseboard.md  pcb_mounting_design_checklist.md  pcba_minimal_height_nicenano.md
models/: case_notes.md  touchpad_case.scad  touchpad_case.stl  外壳-Body001.3mf  外壳-Body001.stl  外壳-盒体.3mf  外壳-盒体.stl  外壳.20260306-174651.FCBak  外壳.20260306-181720.FCBak  外壳.20260308-174220.FCBak  外壳.20260308-184828.FCBak  外壳.20260309-173109.FCBak  外壳.20260309-180938.FCBak  外壳.20260314-095710.FCBak  外壳.20260511-085634.FCBak  外壳.FCStd
sketches/ble_conn_test/: ble_conn_test.ino
sketches/hid_report_dump/: hid_report_dump.ino
sketches/ps2_scan/: ps2_scan.ino
sketches/soft_switch_test/: soft_switch_test.ino
sketches/touchpad_hid/: touchpad_hid.ino
sketches/touchpad_hid_nrf/: touchpad_hid_nrf.ino
sketches/try_read_data/: try_read_data.ino
tools/: bin2uf2_nicenano_v2.sh  host_event_rate_linux.py  input_rate.sh  make_uf2_latest_nicenano_v2.sh  serial_config.py  sync_readme.sh
tools/ui_tauri/src-tauri/: Cargo.toml  tauri.conf.json
tools/ui_tauri/src-tauri/src/: lib.rs  main.rs
(+44 files in other folders)
