[package]
name = "touchpad-config-ui-tauri"
version = "0.1.0"
description = "Touchpad Config UI"
authors = ["TouchPad"]
edition = "2021"

[lib]
name = "touchpad_config_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
anyhow = "1"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
